--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,15 @@
 ---
-
+import Head from "@components/head.astro";
+import "../styles/global.css";
+import { Icon } from "astro-icon/components";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+    <Head />
+    <body>
+        <div class="flex place-items-center text-5xl">
+            <h1 class="font-black">Astro</h1>
+            <Icon name="tabler:accessible" class="text-red-400" />
+        </div>
+    </body>
 </html>
