--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -1,6 +1,6 @@
 ---
 import Favicon from "./Favicon.astro";
-import { siteConfig } from "../config/siteConfig";
+import siteConfig from "../config/siteConfig.json";
 
 export interface Props {
     title?: string;
