--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,15 @@
 ---
-import Head from "@components/head.astro";
-import "../styles/global.css";
+import MainLayout from "@layouts/MainLayout.astro";
 import { Icon } from "astro-icon/components";
 
-const seo = {
-    title: "Coming Soon",
-    description: "Our website is coming soon. Stay tuned for updates!",
-    canonical: "/",
-};
+const title = "Coming Soon";
+const description = "Our website is coming soon. Stay tuned for updates!";
+const canonical = "/";
 ---
 
-<html lang="en">
-    <Head {...seo} />
-    <body>
-        <div class="flex place-items-center text-5xl">
-            <h1 class="font-black">Coming Soon</h1>
-            <Icon name="tabler:accessible" class="text-red-400" />
-        </div>
-    </body>
-</html>
+<MainLayout {title} {description} {canonical}>
+    <div class="flex place-items-center text-5xl">
+        <h1 class="font-black">Coming Soon</h1>
+        <Icon name="tabler:accessible" class="text-red-400" />
+    </div>
+</MainLayout>
