--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseHead from "@components/BaseHead.astro";
+import type { Author } from "../utils/authors";
 import "../styles/global.css";
 import "@tailwindplus/elements";
 
@@ -11,6 +12,7 @@ export interface Props {
     imageAlt?: string;
     type?: "website" | "article";
     noindex?: boolean;
+    authors?: Author[];
 }
 ---
 
