--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,6 +13,7 @@ export interface Props {
     type?: "website" | "article";
     noindex?: boolean;
     authors?: Author[];
+    pubDate?: Date;
 }
 ---
 
