--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,7 +1,6 @@
 ---
 import MainLayout from "@layouts/MainLayout.astro";
 import { getCollection } from "astro:content";
-import { getAuthorsByIdsAsync, formatAuthorNames } from "../../utils/authors";
 
 export async function getStaticPaths() {
     const posts = await getCollection("blog");
@@ -20,19 +19,17 @@ const canonical = `/blog/${post.slug}`;
 const image = post.data.featured_image;
 const type = "article";
 const pubDate = post.data.pubDate;
-
-// Load authors from the post data
-const authors = post.data.authors ? await getAuthorsByIdsAsync(post.data.authors) : [];
+const author = post.data.author;
 ---
 
-<MainLayout {title} {description} {canonical} {image} {type} {authors} {pubDate}>
+<MainLayout {title} {description} {canonical} {image} {type} {author} {pubDate}>
     <article>
         <h1>{post.data.title}</h1>
         
         <div class="post-meta">
-            {authors.length > 0 && (
-                <p class="authors">
-                    By {formatAuthorNames(authors)}
+            {author && (
+                <p class="author">
+                    By {author}
                 </p>
             )}
             <time>{post.data.pubDate.toLocaleDateString()}</time>
@@ -48,42 +45,5 @@ const authors = post.data.authors ? await getAuthorsByIdsAsync(post.data.authors
             )
         }
         <Content />
-        
-        {authors.length > 0 && (
-            <div class="author-bio-section">
-                <h2>About the Author{authors.length > 1 ? 's' : ''}</h2>
-                {authors.map(author => (
-                    <div class="author-bio">
-                        {author.avatar && (
-                            <a href={`/authors/${author.id}`}>
-                                <img src={author.avatar} alt={author.name} class="author-avatar" />
-                            </a>
-                        )}
-                        <div class="author-info">
-                            <h3>
-                                <a href={`/authors/${author.id}`}>{author.name}</a>
-                            </h3>
-                            {author.bio && <p>{author.bio}</p>}
-                            <div class="author-links">
-                                <a href={`/authors/${author.id}`}>View all articles</a>
-                                {(author.website || author.twitter || author.linkedin) && (
-                                    <div class="author-social">
-                                        {author.website && (
-                                            <a href={author.website} target="_blank" rel="noopener noreferrer">Website</a>
-                                        )}
-                                        {author.twitter && (
-                                            <a href={author.twitter} target="_blank" rel="noopener noreferrer">Twitter</a>
-                                        )}
-                                        {author.linkedin && (
-                                            <a href={author.linkedin} target="_blank" rel="noopener noreferrer">LinkedIn</a>
-                                        )}
-                                    </div>
-                                )}
-                            </div>
-                        </div>
-                    </div>
-                ))}
-            </div>
-        )}
     </article>
 </MainLayout>
