--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const canonical = "/";
 
 <MainLayout {title} {description} {canonical}>
     <div class="flex place-items-center text-5xl">
-        <h1 class="font-black">Coming Soon</h1>
+        <h1 class="font-thin">Coming Soon</h1>
         <Icon name="tabler:accessible" class="text-red-400" />
     </div>
 </MainLayout>
