--- a/src/components/Favicon.astro
+++ b/src/components/Favicon.astro
@@ -3,17 +3,17 @@
 ---
 
 <!-- Favicon -->
-<link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
-<link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+<link rel="icon" type="image/x-icon" href="/brand/favicon/favicon.ico" />
+<link rel="icon" type="image/svg+xml" href="/brand/favicon/favicon.svg" />
+<link rel="icon" type="image/png" sizes="16x16" href="/brand/favicon/favicon-16x16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/brand/favicon/favicon-32x32.png" />
 
 <!-- Apple Touch Icon -->
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="/brand/favicon/apple-touch-icon.png" />
 
 <!-- Android Chrome Icons -->
-<link rel="icon" type="image/png" sizes="192x192" href="/favicon/android-chrome-192x192.png" />
-<link rel="icon" type="image/png" sizes="512x512" href="/favicon/android-chrome-512x512.png" />
+<link rel="icon" type="image/png" sizes="192x192" href="/brand/favicon/android-chrome-192x192.png" />
+<link rel="icon" type="image/png" sizes="512x512" href="/brand/favicon/android-chrome-512x512.png" />
 
 <!-- Web App Manifest -->
-<link rel="manifest" href="/favicon/site.webmanifest" />
+<link rel="manifest" href="/brand/favicon/site.webmanifest" />
